Try to stop overflow

--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -41,8 +41,8 @@ a {
   }
 }
 
-html {
-  @apply m-0 p-0 overflow-x-hidden;
+html, body {
+  @apply m-0 p-0 overflow-x-hidden w-full;
 }
 
 body {
